Fixed styling to allow for overflow scroll without showing the forms when they're off screen

--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,7 @@ input {
     border: solid 1px lightgray;
     border-radius: 8px;
 }
+
+.App {
+    overflow: hidden;
+}
